--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
     <!--You need to enable JavaScript to run this app.-->
 <!--</noscript>-->
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB5WBTlX_lGZDeLzFro2iv5bZikdzeUfQ&libraries=places"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB5WBTlX_lGZDeLzFro2iv5bZikdzeUfQ&libraries=places"></script>-->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1hBDE2SWX-U_0AgAHFP8ls1rqTm5KZjs&libraries=places"
+        type="text/javascript"></script>
 <!--
   Notice the use of %PUBLIC_URL% in the tags above.
   It will be replaced with the URL of the `public` folder during the build.
